--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "formily expression highlight vscode plugin",
   "version": "0.0.1",
   "engines": {
-    "vscode": "^1.79.2"
+    "vscode": "^1.80.0"
   },
   "categories": [
     "Other"
@@ -49,5 +49,9 @@
     "mocha": "^10.2.0",
     "typescript": "^5.1.3",
     "@vscode/test-electron": "^2.3.2"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/moushicheng/formily-expression-highlight"
   }
 }
