--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "categories": [
     "Other"
   ],
+  "icon": "logo/logo.png",
   "activationEvents": [],
   "main": "./out/extension.js",
   "contributes": {
