chore: package.json add activationEvents

--- a/package.json
+++ b/package.json
@@ -11,7 +11,12 @@
     "Other"
   ],
   "icon": "logo/logo.png",
-  "activationEvents": [],
+  "activationEvents": [
+    "onLanguage:javascript",
+    "onLanguage:typescript",
+    "onLanguage:javascriptreact",
+    "onLanguage:typescriptreact"
+  ],
   "main": "./out/extension.js",
   "contributes": {
     "commands": {
